Fix play button in fullscreen
It was appearing bigger and offset and was being cut off

--- a/Firefox/styles.css
+++ b/Firefox/styles.css
@@ -332,6 +332,17 @@ ytd-app[frosted-glass-exp] #guide-spacer,
 .ytp-delhi-modern .ytp-chrome-bottom {
     height: 40px !important;
 }
+.ytp-delhi-modern .ytp-chrome-controls .ytp-play-button {
+    height: 40px !important;
+    width: 40px !important;
+}
+.ytp-delhi-modern .ytp-chrome-controls .ytp-play-button svg {
+    height: 24px !important;
+    width: 24px !important;
+}
+.ytp-delhi-modern-icons .ytp-chrome-controls .ytp-play-button svg {
+    padding: var(--yt-delhi-pill-top-height,12px) !important;
+}
 .ytp-delhi-modern .ytp-left-controls > .ytp-button,
 .ytp-delhi-modern .ytp-left-controls .ytp-volume-area,
 .ytp-delhi-modern .ytp-right-controls,
